<resources>
    <string name="app_name">TAElecvis</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">SKIP</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="intro_title_1">Selamat Datang!</string>
    <string name="intro_title_2">Visualization</string>
    <string name="intro_title_3">Notification</string>
    <string name="intro_title_4">Report Consumption</string>
    <string name="intro_title_5">Recommendation</string>
    <string name="intro_sub_title_1">Elecvis merupakan aplikasi yang dapat kamu gunakan untuk memantau konsumsi listrik di ruahmu dengan mudah !</string>
    <string name="intro_sub_title_2">Kamu bisa melihat grafil keseluruhan beserta detail penggunaan energi Listrik di setiap perangkat dan waktu</string>
    <string name="intro_sub_title_3">Kamu akan mendapat pesan notifikasi apabila penggunaan listrik sudah diatas batas ataupun jika kamu lupa mematikan perangkat listrik</string>
    <string name="intro_sub_title_4">Kamu akan mendapat laporan setiap bulan tentang penggunaan listrik kamu secara lengkap</string>
    <string name="intro_sub_title_5">Kamu akan mendapat recommendasi agar konsumsi listrik kamu menjadi lebih efisien dan hemat</string>
    <string name="masuk">Masuk</string>
    <string name="emai">Email</string>
    <string name="password">password</string>
    <string name="atau">atau</string>
    <string name="buat_akun_baru">Buat akun baru</string>
    <string name="masuk_dengan_google">Masuk dengan Google</string>
    <string name="daftar">Daftar</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sudah_punya_akun_masuk">Sudah Punya Akun? Masuk</string>
    <string name="home">Home</string>
    <string name="recommendation">Recommendation</string>
    <string name="report">Report</string>
    <string name="notification">Notification</string>
    <string name="account">Account</string>
    <string name="change_profile">Change Profile</string>
    <string name="account_setting">Account Setting</string>
    <string name="logout">Logout</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="no_handphone">No.Handphone</string>
    <string name="nama">Nama</string>
    <string name="lihat_selengkapnya">Lihat Selengkapnya</string>
    <string name="overview">Overview</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="total">Total</string>
    <string name="average">Average</string>
    <string name="nilai">Nilai</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="_20"><![CDATA[< 20%]]></string>
    <string name="_80"><![CDATA[> 80%]]></string>
    <string name="_40_80">40% - 80%</string>
    <string name="peak_power">Peak Power</string>
    <string name="wasted">Wasted</string>
    <string name="eficiency">Eficiency</string>
    <string name="energy">Energy</string>
    <string name="kitchen">Kitchen</string>
    <string name="laundry_room">Laundry Room</string>
    <string name="water_heater_and_an_air_conditioner">Water-heater and an Air-conditioner</string>
    <string name="selisih">Selisih</string>
    <string name="lihat_laporan_lengkap_pdf">Lihat Laporan Lengkap (pdf)</string>
    <string name="notification_alerts">Notification Alerts</string>
    <string name="kwh">kWh</string>
    <string name="m">M</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="f">F</string>
    <string name="s">S</string>
    <string name="create_alert">Create Alert</string>
    <string name="active">Active</string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="desc_trenkosnsumsi">
        Tren Konsumsi Listrik merujuk pada pola atau kecenderungan dalam penggunaan energi listrik dalam suatu periode waktu tertentu. Dengan Mengetahui Tren ini, kamu dapat merencanakan strategi energi yang berkelanjutan dan efisien.
    </string>
    <string name="desc_puncaklistrik">
        Puncak Konsumsi Listrik merujuk pada titik tertinggi dalam konsumsi listrik dalam satu periode waktu tertentu, yang terjadi saat permintaan listrik mencapai level tertinggi. Dengan mengetahui Puncak Listrik, Kamu dapat mengetahui pada jam-jam berapa puncak listrik terjadi dalam sehari.
    </string>
    <string name="desc_Intensitas">
        Intensitas listrik adalah ukuran dari kekuatan arus listrik yang mengalir dalam suatu sistem. Ini merupakan parameter penting dalam mengevaluasi efisiensi energi dan keandalan sistem kelistrikan. Dengan mengetahui Intensitas listrik, kamu dapat mengidentifikasi potensi kelebihan beban atau gangguan pada sistem.
    </string>
    <string name="desc_voltase">
        Voltase adalah perbedaan potensial elektrik antara dua titik dalam suatu sistem listrik. Ini adalah ukuran dari tekanan listrik yang mendorong arus listrik melalui konduktor. Penelitian menunjukkan bahwa voltase yang tidak stabil atau di luar kisaran yang diinginkan dapat menyebabkan masalah pada peralatan listrik dan mengurangi efisiensi sistem kelistrikan \n \n Disturb Voltase berwarna (Merah) menandakan voltase tidak berada pada rentang yang aman.
    </string>
    <string name="desc_submeter">
        Submetering adalah praktik memasang meter listrik tambahan di dalam bangunan atau unit individual untuk memantau konsumsi energi secara terpisah. Ini memungkinkan pemilik atau pengelola gedung untuk memahami dan mengelola penggunaan energi secara lebih efisien. Penelitian menunjukkan bahwa submetering dapat membantu mengidentifikasi pola konsumsi energi yang tidak efisien dan memotivasi pengguna untuk mengadopsi perilaku yang lebih berkelanjutan. Dalam hal ini. terdapat 3 sub-meter yaitu Kitchen, Laundry Room, dan Water heater, Air Conditioner.
    </string>
    <string name="desc_null">Kosong</string>
    <string name="rekom_tren_warning">
        Konsumsi melampaui batas, pertimbangkan untuk mengevaluasi dan mengidentifikasi area-area di mana konsumsi energi dapat dikurangi atau dioptimalkan.
    </string>
    <string name="rekom_tren_aman">
        Meskipun tren konsumsi listrik berada di bawah ambang batas, tetaplah melakukan pemantauan dan evaluasi secara berkala terhadap penggunaan energi untuk memastikan efisiensi dan keberlanjutan jangka panjang.
    </string>
    <string name="rekom_puncak_warning">
        Untuk menghindari gangguan atau pemadaman listrik, pertimbangkan untuk mengurangi penggunaan listrik saat sistem mencapai puncaknya dengan mengurangi penggunaan peralatan non-kebutuhan atau menerapkan kebijakan pengelolaan beban
    </string>
    <string name="rekom_puncak_aman">
        Dengan tetap berada di bawah ambang batas puncak listrik, pastikan untuk terus memantau permintaan listrik dan mempersiapkan langkah-langkah pengelolaan beban yang diperlukan jika permintaan meningkat secara signifikan
    </string>
    <string name="rekom_voltase_warning">
        Segera identifikasi dan perbaiki masalah pada instalasi listrik jika voltase terus melebihi ambang batas yang ditetapkan untuk memastikan keselamatan dan kinerja peralatan
    </string>
    <string name="rekom_voltase_aman">
        Dengan tetap berada di bawah ambang batas voltase, pastikan untuk menjaga peralatan listrik agar tetap berfungsi dengan baik dan memeriksa secara berkala untuk mencegah potensi masalah tegangan rendah
    </string>
    <string name="rekom_intensitas_warning">
        Untuk mencegah kerusakan pada kabel dan peralatan, pertimbangkan untuk mengurangi beban listrik atau mengganti peralatan yang lebih efisien jika intensitas listrik terus melebihi ambang batas yang ditetapkan
    </string>
    <string name="rekom_intensitas_aman">
        Meskipun intensitas listrik berada di bawah ambang batas, tetaplah memperhatikan kondisi kabel dan peralatan untuk mencegah potensi kelebihan beban atau kebakaran listrik
    </string>
    <string name="rekom_submeter_warning">
        Pertimbangkan untuk mengurangi penggunaan energi jika konsumsi energi Anda terus melebihi ambang batas yang ditetapkan untuk menjaga efisiensi energi dan mengurangi biaya pengeluaran
    </string>
    <string name="rekom_submeter_aman">
        Meskipun konsumsi energi berada di bawah ambang batas, tetaplah memantau penggunaan energi dan mencari cara untuk mengoptimalkan penggunaan energi agar tetap berada dalam batas yang diinginkan
    </string>
    <string name="txt_indikator">Indikator ini merupakan perhitungan teknikal berdasarkan indikator acuan</string>
</resources>