<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/basebackground"
    android:padding="20dp"
    android:layout_height="match_parent"
    tools:context=".view.RegisterFragment">

    <ImageView
        android:id="@+id/iv_Register"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="550dp"
       android:orientation="vertical"
       android:scrollbars="vertical"
       app:layout_constraintTop_toBottomOf="@+id/iv_Register"
       >

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           >

           <TextView
               android:id="@+id/tv_login"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/daftar"
               android:textStyle="bold"
               android:layout_gravity="center"
               android:fontFamily="@font/poppins_bold"
               android:textColor="@color/earth_02"
               android:layout_marginTop="@dimen/margin_10"
               android:textSize="24sp"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@id/iv_Register"
               tools:ignore="TextContrastCheck" />

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/outlinedTextField1"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:hint="@string/nama"
               app:boxStrokeColor="@color/earth_02"
               android:textColorHint="@color/earth_02"
               android:layout_marginTop="20dp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toBottomOf="@id/tv_login">

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/etName_regist"
                   android:textColor="@color/earth_02"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/outlinedTextField"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:hint="@string/username"
               app:boxStrokeColor="@color/earth_02"
               android:textColorHint="@color/earth_02"
               android:layout_marginTop="20dp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toBottomOf="@id/outlinedTextField1">

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/etUsername_regist"
                   android:textColor="@color/earth_02"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/outlinedTextField2"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:hint="@string/email"
               app:boxStrokeColor="@color/earth_02"
               android:textColorHint="@color/earth_02"
               android:layout_marginTop="20dp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toBottomOf="@id/outlinedTextField">

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/etEmail_regist"
                   android:textColor="@color/earth_02"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/outlinedTextField3"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:hint="@string/no_handphone"
               app:boxStrokeColor="@color/earth_02"
               android:textColorHint="@color/earth_02"
               android:layout_marginTop="20dp"
               app:endIconDrawable="@drawable/ic_check"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toBottomOf="@id/outlinedTextField2">

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/etNoHandphone_regist"
                   android:textColor="@color/earth_02"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/outlinedTextField4"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:hint="@string/password"
               app:boxStrokeColor="@color/earth_02"
               android:textColorHint="@color/earth_02"
               android:layout_marginTop="10dp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:endIconMode="password_toggle"
               app:endIconTint="@color/earth_02"
               app:layout_constraintTop_toBottomOf="@id/outlinedTextField3">

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/etPassword_regist"
                   android:layout_width="match_parent"
                   android:inputType="textPassword"
                   android:textColor="@color/earth_02"
                   android:layout_height="wrap_content"
                   tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/outlinedTextField5"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:hint="@string/confirm_password"
               android:textColorHint="@color/earth_02"
               app:boxStrokeColor="@color/earth_02"
               android:layout_marginTop="10dp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:endIconMode="password_toggle"
               app:endIconTint="@color/earth_02"
               app:layout_constraintTop_toBottomOf="@id/outlinedTextField4">

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/etConfirmPassword_regist"
                   android:inputType="textPassword"
                   android:textColor="@color/earth_02"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.button.MaterialButton
               android:id="@+id/btn_register"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="20dp"
               android:backgroundTint="@color/federal_blue"
               android:text="@string/daftar"
               app:cornerRadius="@dimen/margin_25"
               android:textColor="@color/white"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@id/outlinedTextField5"
               tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,VisualLintButtonSize"
               />

           <TextView
               android:id="@+id/tv_link_masuk"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               app:layout_constraintTop_toBottomOf="@+id/btn_register"
               app:layout_constraintEnd_toEndOf="parent"
               android:textColor="@color/earth_02"
               android:layout_marginBottom="200dp"
               android:layout_marginTop="@dimen/margin_10"
               android:text="@string/sudah_punya_akun_masuk"
               />

       </LinearLayout>

   </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>