<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ElectricInfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:scrollbars="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_20"
                android:scrollbars="vertical"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/margin_10">

                    <TextView
                        android:id="@+id/tvNilai"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nilai"
                        android:fontFamily="@font/poppins_medium"
                        android:textAlignment="center"
                        android:textColor="@color/grey"
                        android:textSize="14sp" />
                    <TextView
                        android:id="@+id/tv80"
                        app:layout_constraintTop_toBottomOf="@+id/tvNilai"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="@dimen/margin_10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_80"
                        android:fontFamily="@font/poppins_medium"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                    <TextView
                        android:id="@+id/tv40"
                        app:layout_constraintTop_toBottomOf="@+id/tv80"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="@dimen/margin_10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_40_80"
                        android:fontFamily="@font/poppins_medium"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                    <TextView
                        android:id="@+id/tv20"
                        app:layout_constraintTop_toBottomOf="@+id/tv40"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="@dimen/margin_10"
                        android:layout_height="wrap_content"
                        android:text="@string/_20"
                        android:fontFamily="@font/poppins_medium"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvAksi"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="@dimen/margin_20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Aksi"
                        android:fontFamily="@font/poppins_medium"
                        android:textAlignment="center"
                        android:textColor="@color/grey"
                        android:textSize="14sp" />
                    <TextView
                        android:id="@+id/tvOver"
                        app:layout_constraintTop_toBottomOf="@+id/tvNilai"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="@dimen/margin_20"
                        android:layout_marginTop="@dimen/margin_10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Over"
                        android:fontFamily="@font/poppins_medium"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                    <TextView
                        android:id="@+id/tvNetral"
                        app:layout_constraintTop_toBottomOf="@+id/tv80"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="@dimen/margin_20"
                        android:layout_marginTop="@dimen/margin_10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Netral"
                        android:fontFamily="@font/poppins_medium"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                    <TextView
                        android:id="@+id/tvSaving"
                        app:layout_constraintTop_toBottomOf="@+id/tv40"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="@dimen/margin_20"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="@dimen/margin_10"
                        android:layout_height="wrap_content"
                        android:text="Saving"
                        android:fontFamily="@font/poppins_medium"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_25"
                    android:text="@string/deskripsi"
                    android:textColor="@color/blue3"
                    android:textSize="16sp"
                    android:layout_marginStart="@dimen/margin_20"
                    android:fontFamily="@font/poppins_bold"
                    />

                <TextView
                    android:id="@+id/tvRecommendation"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="@dimen/margin_10"
                    android:layout_marginEnd="@dimen/margin_10"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_height="wrap_content"
                    android:text="Indikator ini Bersadasarkan perhitungan indikator teknikal dari konsumsi harian energi"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/grey"
                    android:textSize="14sp" />



            </LinearLayout>

        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>