<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/basebackground"
    tools:context=".view.NotificationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_10"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_10"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/baseline_arrow_back_24"
                    />

                <TextView
                    android:id="@+id/tvTitleDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notification_alerts"
                    android:fontFamily="@font/poppins_semi_bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="#EAEAEA"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_40"
                app:cardCornerRadius="@dimen/margin_10"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/margin_10"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Alert me when energy consumption above"
                        android:fontFamily="@font/poppins_semi_bold"
                        />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/outlinedTextField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:hint="@string/kwh"
                        app:boxBackgroundColor="@color/white"
                        app:boxStrokeColor="@color/earth_02"
                        android:textColorHint="@color/grey"
                        android:layout_marginTop="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_Login">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etKwhLimitAlerts"
                            android:textColor="@color/earth_02"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/tvDateAlert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_20"
                        android:text="Tomorrow-Thu, 11 Apr"
                        android:fontFamily="@font/poppins_semi_bold"
                        />
                    <ImageView
                        android:id="@+id/ivCalAlert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_calendar_month_24"
                        />


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnCreateAlert"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/_deep"
                        android:text="@string/create_alert"
                        android:layout_marginTop="@dimen/margin_20"
                        />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAlerts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_25"
                android:layout_marginBottom="@dimen/margin_40"
                tools:listitem="@layout/item_alerts"
                />

        </LinearLayout>



    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/main_bottommenu"
        android:layout_gravity="bottom"/>

</androidx.constraintlayout.widget.ConstraintLayout>